--- a/index.html
+++ b/index.html
@@ -12,34 +12,34 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/main.min.css" />
   </head>
 
   <body>
     <header class="header">
       <div class="container">
         <nav class="header-nav">
-          <ul class="header-list list">
-            <li class="header-item">
-              <a href="" class="header-link link current">Главная</a>
+          <ul class="nav-list list">
+            <li class="nav-list__item">
+              <a href="" class="nav-list__link link current">Главная</a>
             </li>
-            <li class="header-item">
-              <a href="" class="header-link link">Услуги</a>
+            <li class="nav-list__item">
+              <a href="" class="nav-list__link link">Услуги</a>
             </li>
-            <li class="header-item">
-              <a href="" class="header-link link">Наши проекты</a>
+            <li class="nav-list__item">
+              <a href="" class="nav-list__link link">Наши проекты</a>
             </li>
-            <li class="header-item">
-              <a href="" class="header-link link">Новости</a>
+            <li class="nav-list__item">
+              <a href="" class="nav-list__link link">Новости</a>
             </li>
-            <li class="header-item">
-              <a href="" class="header-link link">Контакты</a>
+            <li class="nav-list__item">
+              <a href="" class="nav-list__link link">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -48,11 +48,11 @@
     <main>
       <section class="hero">
         <div class="container">
-          <p class="hero-text">Передовая IT студия</p>
-          <h1 class="hero-tittle">
+          <p class="hero__text">Передовая IT студия</p>
+          <h1 class="hero__title">
             Мы создаем легкие решения сложных задач и проблем
           </h1>
-          <button type="button" class="hero-button" data-modal-open>
+          <button type="button" class="hero__button button" data-modal-open>
             Наши проекты
           </button>
         </div>
@@ -60,117 +60,117 @@
 
       <section class="mobile">
         <div class="container">
-          <h2 class="mobile-title">
+          <h2 class="mobile__title">
             Мы создаем мобильные приложения для крупных корпораций
           </h2>
-          <p class="mobile-text">
+          <p class="mobile__text">
             Lorem Ipsum - это текст-"рыба", часто используемый в печати и
             вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
             латинице с начала XVI века.
           </p>
           <ul class="mobile-list list">
-            <li class="mobile-item">
-              <div class="circle-out">
-                <div class="circle-in">
-                  <svg class="mobile-icon" width="40" height="40">
+            <li class="mobile-list__item">
+              <div class="mobile-list__circle-out">
+                <div class="mobile-list__circle-in">
+                  <svg class="mobile-list__icon" width="40" height="40">
                     <use href="./img/icons.svg#icon-project"></use>
                   </svg>
                 </div>
               </div>
-              <div class="mobile-item-content">
-                <h3 class="mobile-list-title">Создание сайтов</h3>
-                <p class="mobile-list-text">
+              <div class="mobile-list__item-content">
+                <h3 class="mobile-list__title">Создание сайтов</h3>
+                <p class="mobile-list__text">
                   Lorem Ipsum - это текст- "рыба", часто используе в печати и
                   вэб-дизайне.
                 </p>
               </div>
             </li>
-            <li class="mobile-item">
-              <div class="circle-out">
-                <div class="circle-in">
-                  <svg class="mobile-icon" width="40" height="40">
+            <li class="mobile-list__item">
+              <div class="mobile-list__circle-out">
+                <div class="mobile-list__circle-in">
+                  <svg class="mobile-list__icon" width="40" height="40">
                     <use href="./img/icons.svg#icon-project"></use>
                   </svg>
                 </div>
               </div>
-              <div class="mobile-item-content">
-                <h3 class="mobile-list-title">Создание сайтов</h3>
-                <p class="mobile-list-text">
+              <div class="mobile-list__item-content">
+                <h3 class="mobile-list__title">Создание сайтов</h3>
+                <p class="mobile-list__text">
                   Lorem Ipsum - это текст- "рыба", часто используе в печати и
                   вэб-дизайне.
                 </p>
               </div>
             </li>
-            <li class="mobile-item">
-              <div class="circle-out">
-                <div class="circle-in">
-                  <svg class="mobile-icon" width="40" height="40">
+            <li class="mobile-list__item">
+              <div class="mobile-list__circle-out">
+                <div class="mobile-list__circle-in">
+                  <svg class="mobile-list__icon" width="40" height="40">
                     <use href="./img/icons.svg#icon-project"></use>
                   </svg>
                 </div>
               </div>
-              <div class="mobile-item-content">
-                <h3 class="mobile-list-title">Создание сайтов</h3>
-                <p class="mobile-list-text">
+              <div class="mobile-list__item-content">
+                <h3 class="mobile-list__title">Создание сайтов</h3>
+                <p class="mobile-list__text">
                   Lorem Ipsum - это текст- "рыба", часто используе в печати и
                   вэб-дизайне.
                 </p>
               </div>
             </li>
           </ul>
-          <button type="button" class="mobile-btn">Все услуги</button>
+          <button type="button" class="mobile__btn button">Все услуги</button>
         </div>
       </section>
       <section class="standard">
         <div class="container">
           <div class="standard-top">
-            <div class="standard-content">
-              <h2 class="standart-title">Высокие стандарты разработки</h2>
-              <p class="standart-text">
+            <div class="standard-top__content">
+              <h2 class="standard-top__title">Высокие стандарты разработки</h2>
+              <p class="standard-top__text">
                 Lorem Ipsum - это текст-"рыба", часто используемый в печати и
                 вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
                 текстов на латинице с начала XVI века. стандартной "рыбой" для
                 текстов на латинице с начала XVI века.
               </p>
-              <a href="" class="standart-link">Подробнее о компании</a>
+              <a href="" class="standard-top__link">Подробнее о компании</a>
             </div>
             <img src="./img/img-1.png" alt="робочий стол" width="500" />
           </div>
           <ul class="standart-list list">
-            <li class="standart-item">
-              <svg class="standsrt-icon" width="30" height="30">
+            <li class="standart-list__item">
+              <svg class="standart-list__icon" width="30" height="30">
                 <use href="./img/icons.svg#icon-web-programming"></use>
               </svg>
-              <span class="standart-item-count">125</span>
-              <p class="standart-item-text">Our projects</p>
+              <span class="standart-list__item-count">125</span>
+              <p class="standart-list__item-text">Our projects</p>
             </li>
-            <li>
-              <svg class="standsrt-icon" width="30" height="30">
+            <li class="standart-list__item">
+              <svg class="standart-list__icon" width="30" height="30">
                 <use href="./img/icons.svg#icon-web-programming"></use>
               </svg>
-              <span class="standart-item-count">125</span>
-              <p class="standart-item-text">Our projects</p>
+              <span class="standart-list__item-count">125</span>
+              <p class="standart-list__item-text">Our projects</p>
             </li>
-            <li>
-              <svg class="standsrt-icon" width="30" height="30">
+            <li class="standart-list__item">
+              <svg class="standart-list__icon" width="30" height="30">
                 <use href="./img/icons.svg#icon-web-programming"></use>
               </svg>
-              <span class="standart-item-count">125</span>
-              <p class="standart-item-text">Our projects</p>
+              <span class="standart-list__item-count">125</span>
+              <p class="standart-list__item-text">Our projects</p>
             </li>
-            <li>
-              <svg class="standsrt-icon" width="30" height="30">
+            <li class="standart-list__item">
+              <svg class="standart-list__icon" width="30" height="30">
                 <use href="./img/icons.svg#icon-web-programming"></use>
               </svg>
-              <span class="standart-item-count">125</span>
-              <p class="standart-item-text">Our projects</p>
+              <span class="standart-list__item-count">125</span>
+              <p class="standart-list__item-text">Our projects</p>
             </li>
-            <li>
-              <svg class="standsrt-icon" width="30" height="30">
+            <li class="standart-list__item">
+              <svg class="standart-list__icon" width="30" height="30">
                 <use href="./img/icons.svg#icon-web-programming"></use>
               </svg>
-              <span class="standart-item-count">125</span>
-              <p class="standart-item-text">Our projects</p>
+              <span class="standart-list__item-count">125</span>
+              <p class="standart-list__item-text">Our projects</p>
             </li>
           </ul>
         </div>
@@ -179,47 +179,49 @@
       <section class="works">
         <div class="container">
           <div class="works-header">
-            <h2 class="works-title">
+            <h2 class="works-header__title">
               Наши работы, на которых мы специализируемся
             </h2>
-            <button type="button" class="works-btn">Все услуги</button>
+            <button type="button" class="works-header__btn button">
+              Все услуги
+            </button>
           </div>
           <ul class="works-list list">
-            <li class="works-item">
+            <li class="works-list__item">
               <img src="./img/img-2.png" alt="командная работа" width="350" />
-              <h3 class="works-heading">
+              <h3 class="works-list__heading">
                 <span>01.</span> Исследование и упаковка
               </h3>
-              <p class="works-text">
+              <p class="works-list__text">
                 Lorem Ipsum - это текст-"рыба", часто используемый в печати и
                 вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
                 текстов на латинице с начала XVI века.
               </p>
-              <a href="" class="works-link">Подробнее</a>
+              <a href="" class="works-list__link">Подробнее</a>
             </li>
-            <li class="works-item">
+            <li class="works-list__item">
               <img src="./img/img-2.png" alt="командная работа" width="350" />
-              <h3 class="works-heading">
+              <h3 class="works-list__heading">
                 <span>01.</span> Исследование и упаковка
               </h3>
-              <p class="works-text">
+              <p class="works-list__text">
                 Lorem Ipsum - это текст-"рыба", часто используемый в печати и
                 вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
                 текстов на латинице с начала XVI века.
               </p>
-              <a href="" class="works-link">Подробнее</a>
+              <a href="" class="works-list__link">Подробнее</a>
             </li>
-            <li class="works-item">
+            <li class="works-list__item">
               <img src="./img/img-2.png" alt="командная работа" width="350" />
-              <h3 class="works-heading">
+              <h3 class="works-list__heading">
                 <span>01.</span> Исследование и упаковка
               </h3>
-              <p class="works-text">
+              <p class="works-list__text">
                 Lorem Ipsum - это текст-"рыба", часто используемый в печати и
                 вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
                 текстов на латинице с начала XVI века.
               </p>
-              <a href="" class="works-link">Подробнее</a>
+              <a href="" class="works-list__link">Подробнее</a>
             </li>
           </ul>
         </div>
@@ -272,7 +274,7 @@
     </main>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-btn" data-modal-close>x</button>
+        <button class="modal__btn" data-modal-close>x</button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
